# Yard-for-Docker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/docker_agent/: agent.py  docker_agentcli.py  yard_agent.py
src/docker_agent/console/: console_ui.py  help_oargs.py
src/docker_agent/helper/: depfile.py  intent_agent.py
src/docker_agent/prompt/: agent_prompt.py  intent_prompt.py
src/docker_agent/prompt/tasks/: dockerfile_prompt.py
src/docker_agent/prompt/tasks/examples/: dockerignore_example.py
src/docker_agent/schema/: intent_schema.py  yard_schema.py
src/docker_agent/tools/: create_dockerfile.py  docker_ignore_file.py
src/yard/: intent_agent.py  logger_config.py  yard_agent.py  yard_cli.py
src/yard/console/: console_ui.py  error.py  help_oargs.py
src/yard/helper/: depfile.py
src/yard/prompt/tasks/: dockerfile_prompt.py
src/yard/prompt/tasks/examples/: dockerfile_example.py
src/yard/schema/: intent_schema.py
src/yard/tools/: create_dockerfile.py  docker_ignore_file.py
