[project]
name = "docker-agent"
version = "0.1.0"
description = "Terminal based AI agent for Docker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]


[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
yard = "docker_agent.docker_agentcli:app"
